Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Added Spanish translation.
Bug fixes:
~~~~~~~~~~
- fixed a makeId unicode issue
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-